feat: develop author protfolio page

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,1 +1,270 @@
-<div class="body">Hello World!</div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Portfolio</title>
+</head>
+
+<body>
+    <div class="frame">
+        <div class="main_frame">
+            <div class="left_frame">
+                <div class="left_1">
+                    <div class="left_1-1">
+                        <img src="images/profile.png" width="156px" height="142" alt="" />
+                    </div>
+                    <div class="left_1-2">
+                        <%=user.name%>
+                    </div>
+                    <div class="left_1-3">
+                        <%=user.profession%>
+                    </div>
+                    <div class="left-icons">
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Facebook.svg" alt="" class="icon-1">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="public/author/icon/Icons-instagram.svg" alt="" class="icon-1">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Twitter.svg" alt="" class="icon-1">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Linkeding.svg" alt="" class="icon-1">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Youtube.svg" alt="" class="icon-1">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Dribbble.svg" alt="" class="icon-1">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left_2">
+                    <div class="age"><span class="age_1">Age:</span><span class="age_2">
+                            <%=user.age%>
+                        </span></div>
+                    <div class="residence"><span class="residence_1">Residence:</span><span class="residence_2">
+                            <%=user.residence%>
+                        </span></div>
+                    <div class="freelance"><span class="freelance_1">Freelance:</span><span class="freelance_2">
+                            <%=user.freelance%>
+                        </span></div>
+                    <div class="address"><span class="address_1">Address:</span><span class="address_2">
+                            <%=user.address%>
+                        </span></div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left_3">
+                    <h3 class="lang">Languages</h3>
+                    <div class="languages_1">
+                        <span>
+                            <%=user.languages[0]%>
+                        </span><span>100%</span>
+                    </div>
+                    <div class="lang_image"><img src="box_images/lang_images/uzbek.svg" alt=""></div>
+                    <div class="languages_1">
+                        <span>
+                            <%=user.languages[1]%>
+                        </span><span>80%</span>
+                    </div>
+                    <div class="lang_image"><img src="box_images/lang_images/korean.svg" alt=""></div>
+
+                    <div class="languages_1">
+                        <span>
+                            <%=user.languages[2]%>
+                        </span><span>60%</span>
+                    </div>
+                    <div class="lang_image"><img src="box_images/lang_images/english.svg" alt=""></div>
+
+                </div>
+                <div class="marginer"></div>
+                <div class="left_4">
+                    <h3 class="skills">Skills
+                    </h3>
+                    <div class="skills_1">
+                        <span>
+                            <%=user.skills[0]%>
+                        </span><span>90%</span>
+                    </div>
+                    <div class="skils_image"><img src="box_images/skills_images/html.svg" alt=""></div>
+                    <div class="skills_1">
+                        <span>
+                            <%=user.skills[1]%>
+                        </span><span>85%</span>
+                    </div>
+                    <div class="skills_image"><img src="box_images/skills_images/css.svg" alt=""></div>
+                    <div class="skills_1">
+                        <span>
+                            <%=user.skills[2]%>
+                        </span><span>80%</span>
+                    </div>
+                    <div class="skills_image"><img src="box_images/skills_images/js.svg" alt=""></div>
+                    <div class="skills_1">
+                        <span>
+                            <%=user.skills[3]%>
+                        </span><span>75%</span>
+                    </div>
+                    <div class="lang_image"><img src="box_images/skills_images/php.svg" alt=""></div>
+                    <div class="skills_1">
+                        <span>
+                            <%=user.skills[4]%>
+                        </span><span>85%</span>
+                    </div>
+                    <div class="lang_image"><img src="box_images/skills_images/wp.svg" alt=""></div>
+                </div>
+                <div class="marginer"></div>
+                <div class="left_5">
+                    <h3 class="extra_skills">Extra Skills</h3>
+                    <div class="extra_skills_1">
+                        <span><img src="box_images/extra_skills_images/one.svg" class="extra_skills_image"
+                                alt=""></span><span>
+                            <%=user.extra_skills[0]%>
+                        </span>
+                    </div>
+                    <div class="extra_skills_1">
+                        <span><img src="box_images/extra_skills_images/two.svg" class="extra_skills_image"
+                                alt=""></span><span>
+                            <%=user.extra_skills[1]%>
+                        </span>
+                    </div>
+                    <div class="extra_skills_1">
+                        <span><img src="box_images/extra_skills_images/three.svg" class="extra_skills_image"
+                                alt=""></span><span>
+                            <%=user.extra_skills[2]%>
+                        </span>
+                    </div>
+                    <div class="extra_skills_1">
+                        <span><img src="box_images/extra_skills_images/four.svg" class="extra_skills_image"
+                                alt=""></span><span>
+                            <%=user.extra_skills[3]%>
+                        </span>
+                    </div>
+                </div>
+                <div class="marginer"></div>
+
+            </div>
+            <div class="midd_frame">
+                <div class="midd_frame_1">
+                    <div class="midd_frame_1-1">
+                        <div class="midd_frame_1-1_1">
+                            <h1>
+                                <%=user.work_place%>
+                            </h1>
+                        </div>
+                        <div class="midd_frame_1-1_2">
+                            <p>
+                                <%=user.about_me%>
+                            </p>
+                        </div>
+                        <div class="midd_frame_1-1_3"><a href=""><img src="btn_icon/hire_me.svg" alt=""></a></div>
+                    </div>
+                    <div class="midd_frame_1-1_your_image"><img src="images/your_image.png" alt=""></div>
+                </div>
+                <div class="midd_frame_2">
+                    <div class="midd_frame_2_1">
+
+                        <h2>My Services</h2>
+
+                        <div>
+                            <p>
+                                <%=user.service_desc%>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="midd_frame_2_2 grid-container">
+                        <div class="midd_frame_2_2_web">
+                            <div><img src="box_images/my_services/coding.svg" alt=""></div>
+
+                            <h3>Web Development</h3>
+
+                            <div>
+                                <p>Blog, E-Commerce </p>
+                            </div>
+                        </div>
+                        <div class="midd_frame_2_2_ux">
+                            <div><img src="box_images/my_services/illustration.svg" alt=""></div>
+
+                            <h3>UI/UX Design</h3>
+
+                            <div>
+                                <p>Mobile App, Website Design </p>
+                            </div>
+                        </div>
+                        <div class="midd_frame_2_2_sound">
+                            <div><img src="box_images/my_services/Microphone.svg" alt=""></div>
+
+                            <h3>Sound Design</h3>
+
+                            <div>
+                                <p>Voice Over, Beat Making </p>
+                            </div>
+                        </div>
+                        <div class="midd_frame_2_2_game">
+                            <div><img src="box_images/my_services/game-development.svg" alt=""></div>
+
+                            <h3>Game Design</h3>
+
+                            <div>
+                                <p>Character Design, Props & Objectics </p>
+                            </div>
+                        </div>
+                        <div class="midd_frame_2_2_photo">
+                            <div><img src="box_images/my_services/photographer.svg" alt=""></div>
+
+                            <h3>Photographer</h3>
+
+                            <div>
+                                <p>Potrait, Product Photography</p>
+                            </div>
+                        </div>
+                        <div class="midd_frame_2_2_ads">
+
+                            <h3>Photographer</h3>
+
+                            <div>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam tenetur ipsa
+                                    delectus, laboriosam sed minima.</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="right_frame">
+                <div class="right_frame_1"><img src="btn_icon/Contrast.svg" alt=""></div>
+                <div class="right_frame_2">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
