feat: Updating author page

--- a/views/author.ejs
+++ b/views/author.ejs
@@ -27,12 +27,42 @@
                     <div class="left-icons">
                         <a class="link_href" href="">
                             <div class="icon">
+                                <img src="icon/Facebook.svg" alt="">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Instagram.svg" alt="">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Twitter.svg" alt="">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Linkeding.svg" alt="">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Youtube.svg" alt="">
+                            </div>
+                        </a>
+                        <a class="link_href" href="">
+                            <div class="icon">
+                                <img src="icon/Dribbble.svg" alt="">
+                            </div>
+                        </a>
+                        <!-- <a class="link_href" href="">
+                            <div class="icon">
                                 <img src="icon/Facebook.svg" alt="" class="icon-1">
                             </div>
                         </a>
                         <a class="link_href" href="">
                             <div class="icon">
-                                <img src="public/author/icon/Icons-instagram.svg" alt="" class="icon-1">
+                                <img src="icon/Icons-instagram.svg" alt="" class="icon-1">
                             </div>
                         </a>
                         <a class="link_href" href="">
@@ -54,7 +84,7 @@
                             <div class="icon">
                                 <img src="icon/Dribbble.svg" alt="" class="icon-1">
                             </div>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
                 <div class="marginer"></div>
@@ -239,11 +269,15 @@
                         </div>
                         <div class="midd_frame_2_2_ads">
 
-                            <h3>Photographer</h3>
+                            <h3>Advertising</h3>
 
                             <div>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam tenetur ipsa
-                                    delectus, laboriosam sed minima.</p>
+                                <div style="color:rgb(118, 118, 118); font-size: 15px;">Lorem ipsum dolor, sit amet
+                                    consectetur adipisicing elit. Vero magnam sequi quasi iste minus quo illum ex
+                                    corporis distinctio ad.
+                                </div>
+                                <div style="height: 20px;"></div>
+                                <a href="" class="order_now">ORDER NOW ></a>
                             </div>
 
                         </div>
@@ -253,15 +287,25 @@
                 </div>
             </div>
             <div class="right_frame">
-                <div class="right_frame_1"><img src="btn_icon/Contrast.svg" alt=""></div>
-                <div class="right_frame_2">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                <div class="right_frame_mode"><a href=""><img src="btn_icon/contrast.svg" alt=""></a></div>
+                <div class="right_frame_nav">
+                    <ul class="right_frame_list-items">
+
+                        <li><a href=""><img src="btn_icon/pop_up.svg" class="right_frame_list-item" alt=""><img
+                                    src="btn_icon/home.svg" alt=""></a>
+                        </li>
+                        <li><a href=""><img src="btn_icon/portfolio.svg" alt=""></a></li>
+                        <li><a href=""><img src="btn_icon/cv.svg" alt=""></a></li>
+                        <li><a href=""><img src="btn_icon/blog.svg" alt=""></a></li>
+                        <li><a href=""><img src="btn_icon/contact.svg" alt=""></a></li>
+                    </ul>
                 </div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
         </div>
     </div>
