--- a/public/main.css
+++ b/public/main.css
@@ -57,7 +57,7 @@
     /* Profile */
     position: relative;
     width: 228px;
-    height: 253px;
+    height: 267px;
     margin-left: 40px;
     margin-right: 37px;
     margin-top: 50px;
@@ -139,8 +139,8 @@
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    width: 228px;
-    height: 22px;
+    width: 238px;
+    margin-top: 19px;
 
 }
 
@@ -152,18 +152,18 @@
 .icon {
     position: relative;
     width: 24.99px;
-    height: 21.61px;
+    height: 22.8px;
     border-radius: 50%;
     filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
     /* Yellow */
-    background: rgb(255, 180, 0);
+    background: #FFB400;
 }
 
 .icon-1 {
     position: relative;
-    left: 29.17;
+    left: 29.17%;
     right: 27.08%;
-    margin-top: 5.86;
+    margin-top: 5.86px;
 }
 
 .main_frame .left_frame .left_2 {
@@ -495,7 +495,6 @@
 }
 
 .midd_frame_1-1_your_image img {
-    border: 2px dashed #999;
     margin-top: 10px;
 }
 
@@ -569,9 +568,6 @@
     flex-direction: column;
 }
 
-.midd_frame_2_2_web img {
-    border: 2px dashed #999;
-}
 
 .midd_frame_2_2_web h3 {
     /* web development */
@@ -617,12 +613,7 @@
     flex-direction: column;
 }
 
-.midd_frame_2_2_ux img,
-.midd_frame_2_2_sound img,
-.midd_frame_2_2_game img,
-.midd_frame_2_2_photo img {
-    border: 2px dashed #999;
-}
+
 
 .midd_frame_2_2_ux h3,
 .midd_frame_2_2_sound h3,
@@ -647,10 +638,9 @@
 .midd_frame_2_2_ux p,
 .midd_frame_2_2_sound p,
 .midd_frame_2_2_game p,
-.midd_frame_2_2_photo p,
-.midd_frame_2_2_ads p {
+.midd_frame_2_2_photo p {
     /* blog, e-commerce */
-    position: absolute;
+    position: relative;
     width: 134px;
     height: 24px;
     color: rgb(118, 118, 118);
@@ -665,9 +655,41 @@
 
 }
 
-.right_frame_1 {
-    position: absolute;
+.midd_frame_2_2_ads .order_now {
+    color: #FFB400;
+    text-align: center;
+    text-decoration: none;
+    position: relative;
+    font-size: 15px;
+    font-weight: 700;
+
+}
+
+
+.right_frame {
+    position: relative;
     width: 25px;
     height: 25px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.right_frame_mode {
+    margin-top: 50px;
+}
+
+.right_frame .right_frame_list-items {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+
+    margin-right: 10px;
+}
+
+.right_frame .right_frame_list-items li {
+    margin-bottom: 40px;
 }
