--- a/views/author.ejs
+++ b/views/author.ejs
@@ -110,7 +110,10 @@
                             <%=user.languages[0]%>
                         </span><span>100%</span>
                     </div>
-                    <div class="lang_image"><img src="box_images/lang_images/uzbek.svg" alt=""></div>
+                    <div class="lang_image">
+                        <progress style="width: 100%; color: #FFB400;" value="100" max="100"> 32% </progress>
+                        <!-- <img src="box_images/lang_images/uzbek.svg" alt=""> -->
+                    </div>
                     <div class="languages_1">
                         <span>
                             <%=user.languages[1]%>
