--- a/views/reja.ejs
+++ b/views/reja.ejs
@@ -37,19 +37,12 @@
                     </div>
                 </li>
                 <%}) %>
-                    <!-- <li class="list-group-item list-group-item-info d-flex justify-content-between align-items-center">
-                    <span class="item-text"></span>
-                    <div>
-                        <button class="edit-me btn btn-danger btn-sm mr-1">
-                            O'chirish</button>
-                        <button class="delete-me btn btn-danger btn-sm">
-                            O'chirish</button>
-                    </div>
-                </li> -->
         </ul>
         <button id="clean-all" class="btn btn-danger" style="border-radius: 20px;">Hammasini
             O'chirish</button><br /><br />
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/browser.js"></script>
 </body>
 
 </html>
